# MetaTag

./: .dockerignore  .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  Dockerfile  GitHub Authentication workflow  Graph_Example.pptx  Modeling_interactions.html  Modeling_interactions.ipynb  Modeling_interactions.nbconvert.ipynb  NOTES.txt  Notes.md  README.md  environment.yml  epa_result.newick  index.html  mkdocs.yml  objects.inv  out.hmm  pyproject.toml  screenlog.0  singleline.fasta  sitemap.xml  test.ipynb  tree.newick  tree_relabel.newick
.github/workflows/: ci.yml  docker.yml  docs.yml  tests.yml
.ipynb_checkpoints/: Modeling_interactions-checkpoint.ipynb
Gene_Annotation_Jose_Tree_Method/: NOTES.txt  peptides.py  peptidesepa3parallel.py
Nuria_pipeline/: TIGRnosZ.HMM  jamboree_steps.html  query.faa
code/: 0MusclePep.py  0MusclePepTrimal.py  Jose_workflow.txt  __setup__.py  buildreferencedatabase.py  buildtree.py  cart.ipynb  classifyNifHsequences.py  clean.py  countplacements.py  evaluateplacements.py  fastree.sh  fasttree.sh  get_koper_seqs.py  getmardbgenomes.py  iqtree.sh  itolfasttree.py  itoliqtree.py  labelplacements.py  loopparallel.py  makedatabase.py  makedatabase_struct.py  makedatabase_structure.py  nifhcart.py  pfamgenomesparallel.py  placesequences.py  plottree.py  preprocess.py  reformatlabel.py  relabelTree.py  relabeltree.py  removetreeoutliers.py  repset_min.py  repset_test.ipynb  setup_papara.py  squeezemodify.py  test.ipynb  test.py
code/accesory/: clean.py  fasta_to_phylip.py  run_papara.py
data/: sequences.fasta.aln  sequencesLongLabels.fasta  sequencesLongLabels_2.fasta  sequencesLongLabels_2_clustered.fasta  sequencesLongLabels_clustered.fasta
docs/: index.md  subcommands.md
envs/: metatag-dev.yml  metatag.yml  traits-test.yml  traits.yml
fastas/: mardb_proteins_V6_TIGR015180_1.fasta  mardb_proteins_V6_TIGR015180_1_modified.fasta
ideas/: README.md
repset_test/: README.md  data.fasta  esl_output.txt  milp.py  repset_dist_to_milp.pickle  repset_test.ipynb  repset_test.py  suffle_fasta.py
scriptsR/: README.txt
select_internal_nodes/: IN_3_98.faa  example.newick  labelled_example.newick  ref_database.faa  src.py  tree_internal_nodes.ipynb
src/: buildreferencedatabase.py  buildtree.py  labelplacements.py  preprocess.py  relabeltree.py  removetreeoutliers.py  setup_papara.py  squeezemodify.py
subcommands/: index.html
tests/: config.json  epa_result.jplace  hmm_struct.sh  mardb_TIGR00639.1.fasta  mardb_TIGR00639.1.fasta.fxi  mardb_TIGR01580.1.fasta  minimal_test.sh  papara_alignment.fasta.aln  papara_alignment.fasta_query_fraction.aln  papara_alignment.fasta_ref_fraction.aln  papara_alignment.phylip  query_sequences.fasta  query_sequences_id_dict.pickle  query_sequences_short_ids.fasta  ref_alignment.contree  ref_alignment.fasta.aln  ref_alignment.fasta.aln.fxi  ref_alignment.fasttree  ref_alignment.phylip  ref_alignment.treefile  ref_alignment_shrink.contree  ref_alignment_shrink_relabel.contree  ref_alignment_trimal.fasta.aln  ref_alignment_trimal.fasta_shrink.aln  ref_alignment_trimal.fasta_shrink_deleted.txt  ref_alignment_trimal.phylip  ref_reduced.fasta  ref_reduced.fasta.clstr  ref_reduced.fasta.fxi  ref_reduced_clean.fasta  ref_reduced_clean.fasta.fxi  ref_reduced_clean_id_dict.pickle  ref_reduced_clean_short_ids.fasta  run_test.sh  squeeze_test.sh  test_pipeline.py
(+285 files in other folders)
