[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "metatag"
version = "0.0.2"
description = "Metagenome functional and taxonomical annotation through phylogenetic tree placement"
license = "Apache-2.0"
authors = [
  "Semidán Robaina Estévez <srobaina@ull.edu.es>",
  "José Manuel González Hernández <jmglezh@ull.edu.es>",
  "Nuria Fernández <nfernandez@cnb.csic.es>"
  ]
maintainers = ["Semidán Robaina Estévez <srobaina@ull.edu.es>"]
readme = "README.md"
homepage = "https://github.com/robaina/TRAITS"
repository = "https://github.com/robaina/TRAITS"
documentation = "https://github.com/robaina/TRAITS"
keywords = ["short reads", "hmm", "metagenomics", "bioinformatics", "phylogenetics", "placement", "annotation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English"
]
packages = [
    { include = "metatag", from = "src" },
]
include = [
    "src/vendor/*",
    "src/cli/*"
]
[tool.poetry.dependencies]
python = "^3.8"
[tool.poetry.scripts]
preprocess = "src.cli.preprocess:main"
makedatabase = "src.cli.makedatabase:main"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # mccabe complexity
    "E999", # match statement is not yet supported
    "W605", # ASCII art, verbatim text
]

[tool.ruff.isort]
known-first-party = ["metatag"]

